src/modals/Modal.module.css
.modal {
  display: none;
  position: fixed;
  z-index: 9999;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  overflow: auto;
  background-color: var(--black);
  background-color: rgba(0, 0, 0, 0.4);
}

.main {
  position: fixed;
  background: var(--white);
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 20px 60px;
}

.close {
  position: absolute;
  top: -4%;
  left: 98%;
  transform: translate(-100%);
  color: var(--grey-100);
  float: right;
  font-size: 50px;
  font-weight: bold;

  cursor: pointer;
}

.body {
  display: flex;
  align-items: center;
  justify-content: center;

  padding: 20px;
  margin: 30px;

  font-size: 24px;
  line-height: 1.8;
  text-align: center;
  font-family: var(--font-family);
}

.block {
  display: block;
}

.none {
  display: none;
}

.buttons {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 50px;
}

